fix card spacing

--- a/src-web/components/ApplicationDeploymentPipeline/components/InfoCards/style.scss
+++ b/src-web/components/ApplicationDeploymentPipeline/components/InfoCards/style.scss
@@ -6,66 +6,75 @@
  * restricted by GSA ADP Schedule Contract with IBM Corp.
  *******************************************************************************/
 
-.resource-cards-info, .overview-cards-info {
-    display: flex;
-    padding: 0 5%;
+.resource-cards-info,
+.overview-cards-info {
+  display: flex;
+  padding: 0 5%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+
+  #card-cem-disabled {
+    margin: 0 7%;
+  }
+
+  #card-cem-enabled {
+    margin: 0 3%;
+  }
+
+  .clickable {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .card-count {
+    line-height: 44px;
+    font-size: 34px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    text-align: center;
+    color: #5a6872;
+
+    &.alert {
+      color: #e0182d;
+    }
+  }
+
+  .card-type {
+    letter-spacing: 1.03px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 20px;
+    color: #5a6872;
+    text-transform: uppercase;
+  }
+
+  .card-text {
+    text-align: center;
+    font-size: 12px;
+    font-style: italic;
+    line-height: 20px;
+    color: #4a4a4a;
+  }
+
+  .card-subtext {
+    text-align: center;
+    font-size: 12px;
+    line-height: 20px;
+    color: #4a4a4a;
+  }
+
+  .column-divider {
     height: 100%;
-    justify-content: space-between;
-    align-items: center;
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+  }
 
-    .clickable {
-        &:hover {
-            cursor: pointer;
-        }
-    }
-
-    .card-count {
-        line-height: 44px;
-        font-size: 34px;
-        font-weight: 600;
-        margin-bottom: 5px;
-        text-align: center;
-        color: #5a6872;
-
-        &.alert {
-            color: #e0182d;
-        }
-    }
-    
-    .card-type {
-        letter-spacing: 1.03px;
-        text-align: center;
-        font-size: 12px;
-        font-weight: 600;
-        line-height: 20px;
-        color: #5a6872;
-        text-transform: uppercase;
-    }
-    
-    .card-text {
-        text-align: center;
-        font-size: 12px;
-        font-style: italic;
-        line-height: 20px;
-        color: #4a4a4a;
-    }
-
-    .card-subtext {
-        text-align: center;
-        font-size: 12px;
-        line-height: 20px;
-        color: #4a4a4a;
-    }
-
-    .column-divider {
-        height:100%;
-        border-left: 1px solid rgba(0, 0, 0, 0.1);
-    }
-
-    .row-divider {
-        width: 100%;
-        border-top: 1px solid rgba(0, 0, 0, 0.1);
-        margin-top: 5px;
-        padding-top: 5px;
-    }
+  .row-divider {
+    width: 100%;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    margin-top: 5px;
+    padding-top: 5px;
+  }
 }
